fix desktop alignment of logo images

--- a/wave_guide/static/css/style.css
+++ b/wave_guide/static/css/style.css
@@ -47,6 +47,13 @@ html {
   min-height: 76px;
 }
 
+.header-logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 12px;
+}
+
 .logo-small {
   height: 120px;
   width: 120px;
